--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
+    "openai": "^4.17.3",
     "sequelize": "^6.33.0",
     "winston": "^3.11.0"
   },
