--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "mangopay2-nodejs-sdk": "^1.40.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
@@ -26,6 +27,8 @@
     "nodemailer": "^6.9.7",
     "openai": "^4.17.3",
     "sequelize": "^6.33.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "winston": "^3.11.0"
   },
   "description": ""
